init my second template

--- a/src/container/template-1.hbs
+++ b/src/container/template-1.hbs
@@ -15,7 +15,7 @@
             </header>
 
             {{!-- <hr class="divider"> --}}
-            {{> divider}}
+            {{!-- {{> divider}} --}}
         </div>
 
         <div class="page_block">
@@ -38,9 +38,9 @@
         </div>
 
         <div class="page_block">
-            {{> divider}}
+            {{!-- {{> divider}} --}}
 
-            <footer class="row footer">
+            <footer class="row g-0 footer">
                 <div class="col-3">
                     {{> logo}}
                     <span class="footer_copyright">Copyright 2023-2024</span>    
