--- a/public/css/template-1.css
+++ b/public/css/template-1.css
@@ -11,6 +11,7 @@
 
 .header{
     padding: 24px;
+    border-bottom: 1px solid #dee2e6;
 }
 
 .logo{
@@ -61,6 +62,7 @@
 
 .footer{
     padding: 24px 0;
+    border-top: 1px solid #dee2e6;;
 }
 
 .footer_copyright{
@@ -77,6 +79,8 @@
 
     display: block;
     margin-bottom: 12px;
+
+    text-overflow: ellipsis;
 }
 
 .hero_title{
@@ -85,6 +89,7 @@
     font-weight: 500;
     margin-bottom: 12px;
     text-align: center;
+
 }
 
 .hero_text{
@@ -93,6 +98,8 @@
     text-align: center;
     max-width: 585px;
     margin: 0 auto;
+
+    line-height: 150%;
 }
 
 .plans_card:not(:last-of-type){
@@ -126,6 +133,12 @@
 .card_price_duration{
     font-size: 29px;
     color: #6c757d;
+
+    /* vertical-align:baseline; 
+    vertical-align:top;*/
+
+    vertical-align: 15px;
+
 }
 
 .card_description_item{
@@ -144,4 +157,79 @@
     width: 100%;
     font-size: 19px;
     padding: 9px;
+}
+
+.card{
+    border: 2px solid blue;
+    /* border-left: 10px dotted red;
+    border-right: medium dashed red;
+    border-top: 2px double red;
+    border-bottom: 1px groove red; 
+    border-bottom-color: 1px ridge blue;*/
+
+    outline: 2px solid red;
+     /*outline-left: 10px dotted red;
+    outline-right: medium dashed red;
+    outline-top: 2px double red;
+    outline-bottom: 1px groove red; 
+    outline-bottom-color: 1px ridge blue;*/
+    border-radius: 15px;
+    /* border-radius: 15px 50px 25px 8px; 
+    border-bottom-left-radius: 15px;*/
+    
+}
+
+
+.card :hover{
+    /* border: 2px solid red;
+    outline: 2px solid blue;
+    outline-offset: 5px;
+    border-radius: 50; */
+    box-shadow: 5px 5px 10px 10px rgba(255, 0, 0, 0.821);
+    cursor: pointer;
+    /* cursor: not-allowed; */
+}
+
+.btn{
+    border-radius: 25px;
+    /* border-radius: 50%; */
+}
+
+h1{
+    text-shadow: 0px 0px 10px rgba(255, 0, 0, 0.221);
+    /* text-shadow: 2px 2px 2px red; */
+}
+
+.plans_card:nth-child(2){
+    /* background: red;  */
+    display: none; 
+    /*visibility: hidden;*/
+
+}
+
+.hero_text{
+    background: gray;
+    /* width: 200px;
+    height: 100px; */
+    /* overflow: hidden; 
+    overflow: overlay;*/
+
+    /* overflow-x: hidden;
+    overflow-y: hidden;
+    text-overflow: ellipsis; */
+    white-space: pre-wrap;
+}
+
+.hero_title{
+    /* font-size: 56px;
+    color: #212529;
+    font-weight: 500;
+    margin-bottom: 12px;
+    text-align: center; */
+    max-width: 660px;
+    margin: 0 auto;
+    margin-bottom: 12px;
+    height: 70px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
