--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -1,5 +1,7 @@
+@layer normalize, main, component, style;
 
 
+@layer normalize{
 /* Document
    ========================================================================== */
 
@@ -928,4 +930,6 @@ input[type='number'] {
 input:-webkit-autofill {
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+
 }
